--- a/www/config.json
+++ b/www/config.json
@@ -1,11 +1,11 @@
 {
 "db_host": "localhost",
 "db_port": 5432,
-"db_name": "nogo_dijkstra",
+"db_name": "nogo_Dijkstra",
 "db_schema": "public",
 "db_user": "postgres",
-"db_pwd": "GalaXYZ_pwd",
-"geo_srid":4326,
+"db_pwd": "postgres",
+"geo_srid": 4326,
 "geo_bbox": 
 	[8.29539476408,
 	49.0464002604,
