--- a/www/config.json
+++ b/www/config.json
@@ -4,7 +4,7 @@
   "db_name": "nogo_dijkstra",
   "db_schema": "public",
   "db_user": "postgres",
-  "db_pwd": "GalaXYZ_pwd",
+  "db_pwd": "postgres",
   "geo_srid": 4326,
   "geo_bbox": [
     8.29539476408,
