Geocoder key moved to Config File

--- a/www/config.json
+++ b/www/config.json
@@ -12,6 +12,8 @@
     8.50387130644,
     48.9734287523
   ],
+  "geocoder_app_id": "VArrXyHCf6xwnR8Wwp5X",
+  "geocoder_app_code": "4PrsrNN9oitLO0DPSEncLg",
   "searchDistance_geocoder": 10000
 
 }
